--- a/paper.Rmd
+++ b/paper.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "plyranges: a grammar for manipulating genomics data" 
+title: "plyranges: a grammar for transforming genomics data" 
 author:
   - name: Stuart Lee
     email: stuart.lee1@monash.edu
@@ -16,7 +16,8 @@ address:
   - code: Genentech
     address: Bioinformatics and Computational Biology, Genentech, Inc., South San Francisco, California, United States of America 
 abstract: |
-    The Bioconductor project has created many powerful abstractions for reasoning about genomics data, such as the _Ranges_ data structures for representing genomic intervals. By recognising that these data structures follow 'tidy' data principles we have created a grammar of genomic data manipulation that defines verbs for performing actions on and between genomic interval data. This grammar simplifies performing common genomic data analysis tasks via a consistent interface to existing Bioconductor infrastructure which results in creating human readable analysis pipelines. We have implemented this grammar as an Bioconductor/R package called plyranges.
+    The Bioconductor project has created many useful data abstractions for analysing high-throughput genomics experiments. However, there is a cognitive load placed on a user in learning a data abstraction and understanding its appropriate use. Throughout a standard workflow, a user must navigate and know many of these abstractions to perform an genomic analysis task, when a single data abstraction, a _Ranges_ object will suffice. The _Ranges_ class naturally represent genomic intervals and their associated measurements. By recognising that the _Ranges_ class follows 'tidy' data principles we have created a grammar of genomic data transformation. The grammar defines verbs for performing actions on and between genomic interval data. It provides a principled way
+    of performing common genomic data analysis tasks through a coherent interface to existing Bioconductor infrastructure, resulting in human readable analysis workflows. We have implemented this grammar as an Bioconductor/R package called plyranges.
   
 bibliography: references.bib
 output: 
