--- a/paper.Rmd
+++ b/paper.Rmd
@@ -50,58 +50,67 @@ As an example agene can be represented with its coordinates, along with its
 identifier and the identifiers of its exons; or an RNA-seq experiment may be
 represented as sets of genes with a matching count column.
 
-
-In the Bioconductor/R packages `IRanges` and `GenomicRanges` these 
-representations have been implemented as a suite of data structures called
-_Ranges_ @Lawrence2013-wg; @Huber2015-ei. These data structures cover 
-many common data types  encountered in bioinformatics analyses. 
-
-The Bioconductor infrastructure for computing with genomic ranges are highly 
-efficient and powerful, however the application programming interface (API) for 
-performing analysis tasks with _Ranges_ is complex due to its large number of
-methods and classes. It also makes resulting scripts written 
-difficult for a non-programmer to read and reason about. An alternative approach 
-would be to implement a domain specific language (DSL) as a fluent interface 
-built on top _Ranges_ [@Fowler2010-zd]. The goal of a fluent interface is to 
-enable users to write  human-readable code via method chaining and consistent function returns. Fluent  interfaces fit naturally in the context of bioinformatics workflows because they 
-enable writing succinct pipelines.
-
-Several other DSLs have been implemented to reason about genomics data. Broadly, 
-these are either implemented as query languages or as command line tools 
-embedded in the Unix environment.  An example of the former is the 
-Genome Query Language (GQL) and its distributed 
+Many domain specific languages (DSLs) have been created to process and reason
+about heterogenous genomics data. Broadly, they are implemented as either
+query languages or as an embedded command line tool.
+An example of the former is the Genome Query Language (GQL) and its distributed 
 implementation GenAp which use an SQL-like syntax for fast retrieval of 
-information from genomic databases and BAM files @Kozanitis2014-va; @Kozanitis2016-bm. 
-Another  example is the Genometric Query Language (GMQL) which implements a 
-relational algebra for combining big genomic datasets @Kaitoua2017-pw.  
-The command line application 
-BEDtools develops an extensive algebra for performing arithmetic between two or 
-more sets of genomic regions  @Quinlan2010-gc. It also has a python interface 
-which simplifies constructing scripts for performing analyses based on BEDTools 
-@Dale2011-js. 
-<!--- probably should also mention something about their cons, and more detail --->
+information of unprocessed sequencing data @Kozanitis2014-va; @Kozanitis2016-bm. 
+Similarly, the Genometric Query Language (GMQL) implements a 
+relational algebra for combining genomic datasets @Kaitoua2017-pw.  
+The command line application BEDtools develops an extensive algebra for 
+performing arithmetic between two or more sets of genomic regions 
+@Quinlan2010-gc; @Dale2011-js. All of the aformentioned DSLs are designed to 
+be run either at the command line or embedded in scripts for batch processing. 
+As a consquence, they are not integrated into an environment designed to 
+perform interactive data  analysis that has access to state of the art 
+methods for statistics and visualisation like the R language. 
 
-The abstraction provided by the _Ranges_ data structures aligns with the concept
-of tidy data @Wickham2014-jc. A tidy dataset is defined to be to a tabular
+The Bioconductor/R packages `IRanges` and `GenomicRanges` 
+define a DSL for analysing genomics data with R via
+an object-oriented (OO) interface @Lawrence2013-wg; @Huber2015-ei. This interface
+provides abstractions for representing genomics data and enables interoperability
+by allowing users and developers to use these abstractions in their own code
+and packages. However, due to the large number of abstractions there are costs
+involved. Due to the OO interface each abstraction will behave slightly 
+differently for any given generic method. There is a cognitive load on the user
+to understand the appropriate context for each abstraction. An alternative approach
+is to recognise that most genomic data analysis tasks can be performed with 
+data structures that naturally represent genomic intervals.
+
+This natural abstraction aligns with the concept of tidy data @Wickham2014-jc. 
+A tidy dataset is defined to be to a tabular
 data structure that has observations as rows and columns as variables, and each
 tidy dataset represents measurements from a single observational unit.
 The tidy data pattern is useful because it allows 
 us to see how the data relates to the design of an experiment
-and the variables measured. Consequently, it makes both the modelling and 
-manipulation of data more systematic. The _Ranges_ data structure follows 
-this abstraction: it is a rectangular table corresponding to a single biological 
+and the variables measured. The genomic interval data structure follows 
+this pattern: it is a rectangular table corresponding to a single biological 
 context. Each row contains a single observation and each column is a variable about
 that observation. 
 
-The _plyranges_ API implements a domain specific language using the existing
-_IRanges_ and _GenomicRanges_ packages in Bioconductor as a back-end. Consequently,
-our API still has the speed and efficiency of the aforementioned packages but
-with a more coherent interface. The API also
-extends the grammar elements in _dplyr_ [@Wickham2017-dplyr] 
-for performing genomic specific
-manipulations such as finding overlapping regions or nearest neighbour regions
-between many _Ranges_ . The _plyranges_ API is specifically designed to enable
-fast interactive analysis of _Ranges_ objects but can also be used for scripting 
+The tidy data abstraction enables the construction of fluent application programming interfaces (APIs) [@Fowler2010-zd] that are optimised for readability. An example of a 
+fluent interface built on the tidy data pattern is the R pacakge `dplyr` [@Wickham2017-dplyr]. 
+The package defines a consistent syntax and style for transforming tabular data sets via
+functions that are named as verbs. Each function performs an action on the data
+set and is cohesive and endomorphic. Cohesion means that each function performs
+a singular task and has no side-effects, while endomorphism means a function
+call returns the same type of object as its input.  
+
+Then the last paragraph (already pretty close) states that:
+
+    we aim to simplify the interface to the most fundamental Ranges data structures, which we must reuse for the reasons stated above,
+    it is possible to align the Ranges data structures with the tabular notions of the dplyr API
+    so we will extend dplyr to incorporate genomic notions
+
+We have created a DSL called `plyranges` that uses the existing
+`IRanges` and `GenomicRanges` packages in Bioconductor as a back-end. Our API 
+still has the speed and efficiency of these packages but
+with a consistent interface. The API also extends the grammar elements in `dplyr` 
+for performing genomic specific manipulations such as finding overlapping 
+regions or nearest neighbour regions between genomic intervals. 
+The _plyranges_ DSL is specifically designed to enable fast interactive 
+analysis of _Ranges_ objects but can also be used for scripting 
 genomic data workflows.
 
 # Design and Implementation
